add characters, and change background

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@ body, html{
 }
 body{
   margin: 0px;
-  background-color:#444;
+  background-image: url("backgrounds/showmewhatyougot.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
   font-size: 18px;
 }
 body, a:link, a:visited, a:active{
@@ -21,7 +23,19 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:10px solid red;
-  border-radius:10px;
+  height: 200px;
+  width: auto;
+  transform-origin: center;
+  transition: all 2s;
   position:absolute;
+}
+.portal{
+  /*background-image: url("danceGifs/portal.gif");*/
+  /*background-size: 100%;*/
+  width: 0px;
+  top: 44%;
+  left: 44%;
+  position: absolute;
+  transform-origin: center center;
+  transition: width 2s, top 1s, left 1s;
 }
